--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-otp-input": "^3.0.4",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
